# CoRE-1.Agent

./: README.md  build_depends.repos  kill_agent.bash
.github/workflows/: ci_humble.yml
core1_agent_bt/: CMakeLists.txt  package.xml
core1_agent_bt/include/core1_agent_bt/: crossdoor_nodes.hpp
core1_agent_bt/src/: crossdoor_nodes.cpp
core1_agent_msgs/: CMakeLists.txt  package.xml
core1_agent_msgs/action/: ExampleTimer.action  Trigger.action
core1_agent_node/: CMakeLists.txt  package.xml
core1_agent_node/src/: core1_agent_node.cpp
core1_agent_node/trees/: target.xml
core1_bt/: CMakeLists.txt  package.xml
core1_bt_libs/: CMakeLists.txt  package.xml
core1_bt_libs/include/core1_bt_libs/: calc_pitch_yaw.hpp  core1_bt_libs.hpp  example_action_client.hpp  get_angles_action_client.hpp  get_enemy_position_client.hpp  set_angles_action_client.hpp  shoot_client.hpp  sub_bool.hpp  sub_detection3darray.hpp  sub_empty.hpp  sub_float64.hpp  sub_int.hpp  sub_posearray.hpp  sub_string.hpp
core1_bt_libs/src/: calc_pitch_yaw.cpp  example_action_client.cpp  get_angles_action_client.cpp  get_enemy_position_client.cpp  set_angles_action_client.cpp  shoot_client.cpp  sub_bool.cpp  sub_detection3darray.cpp  sub_empty.cpp  sub_float64.cpp  sub_int.cpp  sub_posearray.cpp  sub_string.cpp
core1_bt_node/: CMakeLists.txt  package.xml
core1_bt_node/src/: example_action_server.cpp  main.cpp  sub_test.cpp
core1_bt_node/trees/: test.xml  test_panel.xml
